@@ -1,3 +1,4 @@
+ALTER TABLE remito ADD COLUMN anulada timestamp with time zone;
 ALTER TABLE factura_compra ADD COLUMN otros_ivas numeric(12,2) NOT NULL DEFAULT 0;
 ALTER TABLE nota_credito ADD COLUMN otros_ivas numeric(12,2) NOT NULL DEFAULT 0;
 ALTER TABLE cheque_terceros DROP COLUMN librado;
